--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,7 @@
 builder = "nixpacks"
 
 [build.args]
-NIXPACKS_BUILD_APT_PACKAGES = "google-chrome-stable chromium-driver"
+NIXPACKS_BUILD_APT_PACKAGES = "google-chrome-stable chromium-browser chromium-driver xvfb"
+
+[deploy]
+startCommand = "python main.py"
